...
                </Text>
                <Controller
                  control={control}
                  name="email"
                  render={({ field: { onChange, onBlur, value } }) => (
                    <TextInput
                      testID="email-input"
                      className="h-14 w-full rounded-2xl bg-zinc-100 px-4 text-base dark:bg-zinc-900"
                      style={{ color: colors.text.primary }}
                      onBlur={onBlur}
                      onChangeText={onChange}
                      value={value}
                      placeholder={t('auth.login.emailPlaceholder')}
...
                </Text>
                <Controller
                  control={control}
                  name="password"
                  render={({ field: { onChange, onBlur, value } }) => (
                    <TextInput
                      testID="password-input"
                      className="h-14 w-full rounded-2xl bg-zinc-100 px-4 text-base dark:bg-zinc-900"
                      style={{ color: colors.text.primary }}
                      onBlur={onBlur}
                      onChangeText={onChange}
                      value={value}
                      placeholder={t('auth.login.passwordPlaceholder')}
...
